# fnotify

./: CMakeLists.txt  Makefile  README.md  config.c  config.h  def.h  fnotify.c  fnotify.conf  main.c  notify.c  notify.h  watch.c  watch.h
